SlimFramework: Updates for public resources
  * Use custom resource id
  * set coreApp
  * add some missing flags

Change-Id: Ib26cc287fc0807a91022139158c06d7c7c02bba5

--- a/res/AndroidManifest.xml
+++ b/res/AndroidManifest.xml
@@ -14,7 +14,8 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.slim.framework">
+          package="org.slim.framework"
+          coreApp="true" android:sharedUserId="android.uid.system">
 
     <!-- Allows an application to write to Slim system settings -->
     <permission android:name="slim.permission.WRITE_SETTINGS"
