Slim: Allow disabling HW Key lights
Also includes the below fix, ported from CM to the Slim framework:

Slim: Fix backlight illumination summary and timeout

This fixes the visual indicator of the button illumination summary after
trying to disable. Previously after setting the timeout to never, would
display a summary of "1", or with 5, it would end up displaying 6 after
applying the settings.

https://review.cyanogenmod.org/#/c/141905/
Ticket: CYNGNOS-2565
Signed-off-by: Roman Birg <roman@cyngn.com>
Signed-off-by: Dan Cartier <nospamdan1@gmail.com>

Change-Id: I5dcff16c9d2656579614ceb6574e91e6a31c9734
Signed-off-by: Dan Cartier <nospamdan1@gmail.com>
Signed-off-by: Griffin Millender <griffinn.millender@gmail.com>

--- a/packages/SlimSettings/AndroidManifest.xml
+++ b/packages/SlimSettings/AndroidManifest.xml
@@ -96,7 +96,8 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="com.slim.settings.SlimReceiver" android:enabled="true">
+        <receiver android:name="com.slim.settings.SlimReceiver" android:enabled="true"
+                    android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter android:priority="2147483647">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_SWITCHED" />
