opt_slim: (1/2) Fix Advanced Doze Settings
  * Fix typo in AndroidManifest

Change-Id: I928a47e26e9a064523ac34b36c7219bdc0f3b346

--- a/packages/SlimSettings/AndroidManifest.xml
+++ b/packages/SlimSettings/AndroidManifest.xml
@@ -58,7 +58,7 @@
         </activity>
 
         <activity
-            android:name="com.slim.settings.activities.DozeSettingsAcitivity"
+            android:name="com.slim.settings.activities.DozeSettingsActivity"
             android:label="@string/doze_settings_title"
             android:theme="@android:style/Theme.Material.Settings" >
 
