Remove Advanced Settings if not available on device
Change-Id: Ia44bdf3425f4c2801a315d218179dcdb2bc00649

--- a/packages/SlimSettings/AndroidManifest.xml
+++ b/packages/SlimSettings/AndroidManifest.xml
@@ -96,5 +96,12 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name="com.slim.settings.SlimReceiver" android:enabled="true">
+            <intent-filter android:priority="2147483647">
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_SWITCHED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 </manifest>
