Fix Slim Action Shortcuts
Change-Id: Icf49ddb45289fe545199d56ab6767edc15009b05

--- a/packages/SlimSettings/AndroidManifest.xml
+++ b/packages/SlimSettings/AndroidManifest.xml
@@ -87,7 +87,7 @@
         </activity>
 
         <activity
-            android:name=".slim.SlimActionShortcut"
+            android:name="com.android.settings.slim.SlimActionShortcut"
             android:theme="@android:style/Theme.NoDisplay"
             android:excludeFromRecents="true"
             android:launchMode="singleInstance" >
