Slim Framework N bringup
Change-Id: I884e1b1129d45ed9a8444f304135b5e5e0440468

--- a/packages/SlimSettingsProvider/AndroidManifest.xml
+++ b/packages/SlimSettingsProvider/AndroidManifest.xml
@@ -7,8 +7,10 @@
                  android:label="@string/app_label"
                  android:process="system"
                  android:killAfterRestore="false"
+                 android:defaultToDeviceProtectedStorage="true"
+                 android:directBootAware="true"
                  android:icon="@mipmap/ic_launcher_settings">
-                 
+
     <!-- todo add: android:neverEncrypt="true" -->
 
         <provider android:name="SlimSettingsProvider"
