--- a/packages/SlimSystemUI/AndroidManifest.xml
+++ b/packages/SlimSystemUI/AndroidManifest.xml
@@ -23,5 +23,6 @@
     <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES" />
 
     <uses-permission android:name="slim.permission.SLIM_ACTIONS_SERVICE" />
+    <uses-permission android:name="slim.permission.WRITE_SETTINGS" />
 
 </manifest>
