--- a/packages/SlimSettings/AndroidManifest.xml
+++ b/packages/SlimSettings/AndroidManifest.xml
@@ -7,14 +7,14 @@
 
     <application
         android:icon="@android:drawable/sym_def_app_icon"
-        android:theme="@style/SettingsTheme"
+        android:theme="@style/Theme.Settings"
         android:label="SlimSettings" >
 
         <activity
             android:name="com.slim.settings.activities.InterfaceSettingsActivity"
             android:label="@string/interface_settings_title"
             android:icon="@drawable/ic_settings_interface"
-            android:theme="@style/SettingsTheme" >
+            android:theme="@style/Theme.Settings" >
 
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
@@ -30,7 +30,7 @@
             android:name="com.slim.settings.activities.NavigationSettingsActivity"
             android:label="@string/navigation_settings_title"
             android:icon="@drawable/ic_settings_navigation"
-            android:theme="@style/SettingsTheme" >
+            android:theme="@style/Theme.Settings" >
 
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
@@ -46,7 +46,7 @@
             android:name="com.slim.settings.activities.AdvancedSettingsActivity"
             android:label="@string/advanced_settings"
             android:icon="@drawable/ic_settings_advanced"
-            android:theme="@style/SettingsTheme" >
+            android:theme="@style/Theme.Settings" >
 
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
@@ -61,7 +61,7 @@
         <activity
             android:name="com.slim.settings.activities.DozeSettingsActivity"
             android:label="@string/doze_settings_title"
-            android:theme="@style/SettingsTheme" >
+            android:theme="@style/Theme.Settings" >
 
             <intent-filter>
                 <action android:name="com.slim.settings.action.DOZE_SETTINGS" />
@@ -70,7 +70,7 @@
         </activity>
 
         <activity android:name=".SubSettings"
-                android:theme="@style/SettingsTheme"
+                android:theme="@style/Theme.Settings"
                 android:taskAffinity="com.slim.settings">
         </activity>
 
