--- a/packages/SlimSettings/AndroidManifest.xml
+++ b/packages/SlimSettings/AndroidManifest.xml
@@ -69,6 +69,17 @@
 
         </activity>
 
+        <activity
+            android:name="com.slim.settings.activities.ProxAutoSpeakerActivity"
+            android:label="@org.slim.framework:string/prox_auto_speaker_title"
+            android:theme="@style/Theme.Settings" >
+
+            <intent-filter>
+                <action android:name="com.slim.settings.action.PROXIMITY_AUTO_SPEAKER_SETTINGS" />
+            </intent-filter>
+
+        </activity>
+
         <activity android:name=".SubSettings"
                 android:theme="@style/Theme.Settings"
                 android:taskAffinity="com.slim.settings">
