--- a/packages/SlimSettings/AndroidManifest.xml
+++ b/packages/SlimSettings/AndroidManifest.xml
@@ -22,10 +22,18 @@
           android:versionCode="1"
           android:versionName="1" >
 
+    <uses-permission android:name="android.permission.READ_SEARCH_INDEXABLES" />
+
     <application
         android:icon="@android:drawable/sym_def_app_icon"
         android:theme="@style/Theme.Settings"
         android:label="SlimSettings" >
+
+        <activity
+            android:name="com.slim.settings.SettingsActivity"
+            android:label="SlimSettings"
+            android:icon="@android:drawable/sym_def_app_icon"
+            android:theme="@style/Theme.Settings" />
 
         <activity
             android:name="com.slim.settings.Settings$InterfaceSettingsActivity"
@@ -182,6 +190,19 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".search.SlimSearchIndexablesProvider"
+            android:authorities="com.slim.settings"
+            android:multiprocess="false"
+            android:grantUriPermissions="true"
+            android:permission="android.permission.READ_SEARCH_INDEXABLES"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.content.action.SEARCH_INDEXABLES_PROVIDER" />
+            </intent-filter>
+        </provider>
+
 
     </application>
 </manifest>
