SystemUI: Add sync qs tile
Origionally from our M branch, some fixes from tipsyOS

Change-Id: I725f694c5aeb9eca6db7d98f0ec829ba9b32b227
Signed-off-by: Prema Chand A <premaca@gmail.com>
Signed-off-by: Josue Rivera <prbassplayer@gmail.com>

--- a/packages/SlimSystemUI/AndroidManifest.xml
+++ b/packages/SlimSystemUI/AndroidManifest.xml
@@ -25,4 +25,8 @@
     <uses-permission android:name="slim.permission.SLIM_ACTIONS_SERVICE" />
     <uses-permission android:name="slim.permission.WRITE_SETTINGS" />
 
+    <!-- Sync tile -->
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+
 </manifest>
