Add Gesture settings with DT2S
Change-Id: I3612bb57b5fe6b0d8e2d85fe6d847203cccbc2fe

--- a/packages/SlimSettings/AndroidManifest.xml
+++ b/packages/SlimSettings/AndroidManifest.xml
@@ -60,7 +60,36 @@
         </activity>
 
         <activity
-            android:name="com.slim.settings.activities.DozeSettingsActivity"
+            android:name="com.slim.settings.Settings$BatteryLightSettingsActivity"
+            android:enabled="@*slim:bool/config_intrusiveBatteryLed"
+            android:taskAffinity="com.slim.settings"
+            android:label="@string/battery_light_title"
+            android:icon="@drawable/ic_settings_interface">
+            <intent-filter android:priority="1">
+                <action android:name="slim.settings.BATTERY_LIGHT_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.slim.settings.notificationlight.BatteryLightSettings" />
+        </activity>
+
+        <activity
+            android:name="com.slim.settings.activities.GestureSettingsActivity"
+            android:label="@string/gesture_settings_title"
+            android:icon="@drawable/ic_settings_interface"
+            android:theme="@style/Theme.Settings" >
+
+            <intent-filter>
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
+            </intent-filter>
+
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.personalization" />
+        </activity>
+
+        <activity
+            android:name="com.slim.settings.Settings$DozeSettingsActivity"
             android:label="@string/doze_settings_title"
             android:theme="@style/Theme.Settings" >
 
