Add Gesture settings with DT2S
Change-Id: I3612bb57b5fe6b0d8e2d85fe6d847203cccbc2fe

--- a/packages/SlimSettings/AndroidManifest.xml
+++ b/packages/SlimSettings/AndroidManifest.xml
@@ -105,6 +105,21 @@
         </activity>
 
         <activity
+            android:name="com.slim.settings.activities.GestureSettingsActivity"
+            android:label="@string/gesture_settings_title"
+            android:icon="@drawable/ic_settings_interface"
+            android:theme="@style/Theme.Settings" >
+
+            <intent-filter>
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
+            </intent-filter>
+
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.personalization" />
+        </activity>
+
+        <activity
             android:name="com.slim.settings.Settings$DozeSettingsActivity"
             android:label="@string/doze_settings_title"
             android:theme="@style/Theme.Settings" >
