SlimSettingsProvider: Allow data migration from cmsettings
Change-Id: I636f8315ce8a36f6d223d6a5accfe11c40ef9570

--- a/packages/SlimSettingsProvider/AndroidManifest.xml
+++ b/packages/SlimSettingsProvider/AndroidManifest.xml
@@ -3,6 +3,8 @@
         coreApp="true"
         android:sharedUserId="android.uid.system">
 
+    <original-package android:name="org.slim.SlimSettings" />
+
     <application android:allowClearUserData="false"
                  android:label="@string/app_label"
                  android:process="system"
