slim: Update StatusBar, tiles, SlimSystemUI and SlimSettingsCmd for O
Change-Id: Ia8f8ce4232951a8ee43320c56ea7b023aa6a15d5

--- a/packages/SlimSettings/AndroidManifest.xml
+++ b/packages/SlimSettings/AndroidManifest.xml
@@ -39,7 +39,7 @@
 
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.personalization" />
+                android:value="com.android.settings.category.ia.homepage" />
 
         </activity>
 
@@ -55,7 +55,7 @@
 
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.personalization" />
+                android:value="com.android.settings.category.ia.homepage" />
 
         </activity>
 
